--- a/sayt.css
+++ b/sayt.css
@@ -175,9 +175,19 @@ h1{
 }
 
 #haqqimizdarsm{
-    width: 320px;
-    height: 240px;
+    width: 240px;
+    height: 320px;
     float: left;
     border-radius: 10px;
     margin: 10px;
+}
+.login:link{
+    display: block;
+    width: 100px;
+    height: 10px;
+    padding: 1px 15px;
+    float: right;
+    margin: 3px;
+    border-radius: 10px;
+    text-decoration: none;
 }
